# RayTracer

./: CMakeLists.txt  main.cpp
Loader/: Mesh.cpp  Mesh.h  ObjLoader.cpp  ObjLoader.h
PathTracer/BasicRayTracing/: Scenic.cpp  Scenic.h
PathTracer/common/: Ray.h
common/: AABB.h  Camera.h  EigenLidan.h  Lmath.h  Model.h  Texture.h  perlin.h  usingImage.h  util.h
model/: Model.cpp  Model.h  ObjModel.cpp  ObjModel.h  Sphere.h
